<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/addedImage"
            android:layout_width="0dp"
            android:layout_height="290dp"
            android:layout_marginTop="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/eats_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <EditText
            android:id="@+id/setPrice"
            android:layout_width="210dp"
            android:layout_height="42dp"
            android:layout_marginStart="164dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/post_item_bck"
            android:ems="10"
            android:hint="price (optional)"
            android:inputType="number"
            android:maxLength="50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addedImage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="200"
            app:counterTextAppearance="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterCategory">

            <EditText
                android:id="@+id/setDescription"
                android:layout_width="376dp"
                android:layout_height="83dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/post_item_bck"
                android:ems="10"
                android:gravity="center"
                android:hint="description"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.457"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterCategory" />

        </com.google.android.material.textfield.TextInputLayout>


        <EditText
            android:id="@+id/setCaption"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="164dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/post_item_bck"
            android:ems="10"
            android:hint="caption"
            android:inputType="textPersonName"
            android:maxLength="50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setPrice" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="164dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/sign_in_button"
            android:backgroundTint="#00FFFF"
            android:text="Post"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <EditText
            android:id="@+id/enterCategory"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/post_item_bck"
            android:ems="10"
            android:hint="category(e.g Zambian)"
            android:inputType="textPersonName"
            android:maxLength="50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setCaption" />

        <Button
            android:id="@+id/captureImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="158dp"
            android:text="capture"
            android:textAllCaps="false"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addedImage" />

        <Button
            android:id="@+id/selectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:text="select"
            android:textAllCaps="false"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/captureImage" />

        <ProgressBar
            android:id="@+id/savingPost"
            style="?android:attr/progressBarStyle"
            android:layout_width="112dp"
            android:layout_height="96dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.574" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="enter price"
            android:textColor="#040303"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/setPrice"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addedImage" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="enter caption"
            android:textColor="#090808"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/setCaption"
            app:layout_constraintHorizontal_bias="0.202"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="enter category"
            android:textColor="#121111"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/enterCategory"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="add image"
            android:textColor="#151414"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/addedImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>