...
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="241dp"
        android:layout_height="55dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:gravity="center"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eatsLogo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:gravity="center"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInBtn"
        android:layout_width="114dp"
        android:layout_height="54dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/sign_in_button"
        android:backgroundTint="#00FFFF"
        android:text="sign In"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
...
